@@ -3,8 +3,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- $r->log->$level(sub {})
-
 - 'make htmldoc' (Brian Moseley)
 
 - make DYNAMIC=1 work again
@@ -15,8 +13,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 Lupe Christoph <lupe@alanya.m.isar.de>, Don Hayward <don@mote.org>
 
 - ap_log_error -> ap_log_rerror
-
-- Apache::Constants :override :args_how
 
 - make 'make test_report' more useful
 
