@@ -1,6 +1,19 @@
 /*
  * Generated by Apache::Constants::Exports::gen_ctags, do not edit!!!
- */  
+ */
+static char *ETAG_override[] = { 
+   "OR_NONE",
+   "OR_LIMIT",
+   "OR_OPTIONS",
+   "OR_FILEINFO",
+   "OR_AUTHCFG",
+   "OR_INDEXES",
+   "OR_UNSET",
+   "OR_ALL",
+   "ACCESS_CONF",
+   "RSRC_CONF",
+   NULL,
+};
 static char *ETAG_http[] = { 
    "HTTP_METHOD_NOT_ALLOWED",
    "HTTP_NOT_ACCEPTABLE",
@@ -46,7 +59,6 @@ static char *ETAG_config[] = {
 static char *ETAG_server[] = { 
    "MODULE_MAGIC_NUMBER",
    "SERVER_VERSION",
-   "SERVER_SUBVERSION",
    "SERVER_BUILT",
    NULL,
 };
@@ -58,6 +70,20 @@ static char *ETAG_common[] = {
    "FORBIDDEN",
    "AUTH_REQUIRED",
    "SERVER_ERROR",
+   NULL,
+};
+static char *ETAG_args_how[] = { 
+   "RAW_ARGS",
+   "TAKE1",
+   "TAKE2",
+   "ITERATE",
+   "ITERATE2",
+   "FLAG",
+   "NO_ARGS",
+   "TAKE12",
+   "TAKE3",
+   "TAKE23",
+   "TAKE123",
    NULL,
 };
 static char *ETAG_remotehost[] = { 
@@ -122,6 +148,9 @@ static char *ETAG_response[] = {
 };
 static char **export_tags(char *tag) {
    switch (*tag) {
+	case 'a':
+	if(strEQ("args_how", tag))
+	   return ETAG_args_how;
 	case 'c':
 	if(strEQ("config", tag))
 	   return ETAG_config;
@@ -134,6 +163,8 @@ static char **export_tags(char *tag) {
 	if(strEQ("methods", tag))
 	   return ETAG_methods;
 	case 'o':
+	if(strEQ("override", tag))
+	   return ETAG_override;
 	if(strEQ("options", tag))
 	   return ETAG_options;
 	case 'r':
